fix gap on progress bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -169,9 +169,7 @@ noscript {
 
 /* ------------------------------ Audio button */
 
-.audio-buttons {
-  margin-left: 5px;
-}
+
 
 .audio-button {
   z-index: 2;
